# datacenter-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.agent/: guardrails.md  project-manifest.md
.agent/knowledge/: system-context.md
.claude/: settings.json
.github/workflows/: runtime.yml
.spec/plan/: sub_agent.md
config/: config.toml  mcp-config.toml
config/prompt_guide/: agent_system.md  analyst_system.md  charter_system.md  fetcher_system.md  greeting_analyst_system.md  greeting_fetcher_system.md  greeting_system.md  greeting_user.md  report_analyst_system.md  report_composer_system.md  report_system.md
config/report_template/: report.html
config/runtime/: injection.toml  intents.toml  lexicon.toml  thresholds.toml
docs/: index.md
docs/agent-runtime-rust-port/: completion-audit.md  file-structure.md  implementation-plan.md  meta.yml  migration-log.md  migration-plan.md  prd.md  response-baseline-guide.md  rollback-runbook.md  runtime-architecture-spec.md
docs/reference/: index.md  prd.md
docs/work/: index.md
resources/: model_eval_prompts.md
scripts/: staging-smoke.sh
src/: appstate.rs  config.rs  lib.rs  main.rs  mcp_client.rs  model.rs
src/agent/: chart.rs  clock.rs  config.rs  engine.rs  events.rs  llm.rs  mod.rs  payload.rs  pipeline.rs  report.rs  tools.rs  wiring.rs
src/llm_connector/: agent.rs  client.rs  generate.rs  mod.rs  streamer.rs
src/runtime/: audit.rs  config.rs  error.rs  llm_normalizer.rs  mod.rs  orchestrator.rs  registry.rs  schema.rs  turn.rs
src/server/: auth.rs  dto.rs  error.rs  greeting.rs  handler.rs  mod.rs  openai.rs  route.rs  (+1 more)
tests/: agent_pipeline.rs  deployment_contract.rs  eval_cli.rs  fetcher_datacenter.rs  llm_connector.rs  repro_report_data.rs  runtime_contract.rs  streaming_datacenter.rs
(+86 files in other folders)
